CLA-1787 - remove icon addition to move this to another branch, sonar fixes to column visibility.

--- a/Sentry.data.Web/Content/dale.css
+++ b/Sentry.data.Web/Content/dale.css
@@ -73,7 +73,10 @@
     margin-right: 100px; 
 }
 
-table.dataTable thead .sorting {
+
+
+/*these are added so dale datatable can find sorting images, future move these where all datatables can find*/
+/*table.dataTable thead .sorting {
     background: url('/Content/DataTables/images/sort_both.png') no-repeat center right;
 }
 
@@ -91,4 +94,4 @@ table.dataTable thead .sorting_asc_disabled {
 
 table.dataTable thead .sorting_desc_disabled {
     background: url('/Content/DataTables/images/sort_desc_disabled.png') no-repeat center right;
-}
+}*/
